<resources>
    <string name="app_name">Bloqueo Escolar</string>
    <!-- Pantalla Inicio de sesión-->
    <string name="app_login_title">Bloqueo Escolar</string>
    <string name="app_login_btn_login">Iniciar sesión</string>
    <string name="app_login_btn_text_register">CREAR CUENTA</string>
    <string name="app_login_btn_text_forget_password">He olvidado mi contraseña</string>
    <!-- Pantalla Registro -->
    <string name="app_register_title">Registro</string>
    <string name="app_register_instructions">Por favor ingresa tus datos</string>
    <string name="app_register_input_name">Nombre</string>
    <string name="app_register_input_ap_paterno">Apellido Paterno</string>
    <string name="app_register_input_ap_materno">Apellido Materno</string>
    <string name="app_register_input_email">  Correo electrónico</string>
    <string name="app_register_input_psw">  Contraseña</string>
    <string name="app_register_input_psw_confirm">Confirmar contraseña</string>
    <string name="app_register_btn_register">Registrar</string>

    <!-- Pantalla grados -->
    <string name="app_grades_instructions">Selecciona el grado escolar</string>
    <string name="app_grades_1">1er Grado</string>
    <string name="app_grades_2">2do Grado</string>
    <string name="app_grades_3">3er Grado</string>
    <string name="app_grades_4">4to grado</string>
    <string name="app_grades_5">5to Grado</string>
    <string name="app_grades_6">6to Grado</string>

    <!-- Exams -->
    <string name="app_exams_new">Crear Exámen</string>
    <string name="app_exams_available">Exámenes Disponibles</string>
    <string name="app_exams_approved">Exámenes Aprobados</string>

    <!-- Questions -->
    <string name="app_question_option_a">A)</string>
    <string name="app_question_option_b">B)</string>
    <string name="app_question_option_c">C)</string>
    <string name="app_question_option_d">D)</string>
    <string name="app_question_send">Enviar</string>

    <!-- Pantalla Add Question -->
    <string name="app_add_question_description">Descripcion del problema</string>
    <string name="app_add_question_answer">Respuesta</string>
    <string name="app_add_question_add">Agregar Pregunta</string>
    <string name="app_add_question_finish">Terminar Examen</string>

    <!-- Send Exam Dialog -->
    <string name="app_dialog_send_exam_input">Nombre del exámen</string>
    <string name="app_dialog_send_exam_send">Enviar</string>
    <string name="app_dialog_send_exam_cancel">Cancelar</string>

    <!-- Score -->
    <string name="app_score_title">¡Hey, felicidades!</string>
    <string name="app_score_username">Usuario</string>
    <string name="app_score_btn_exit">Salir</string>
    <string name="app_score_btn_retry">Presentar nuevamente</string>

    <!-- Imagenes -->
    <string name="img_score_results">Resultados de examen estatus</string>
    <string name="img_exams_available_icon">Exámenes disponibles icono</string>
    <string name="img_exams_approved_icon">Exámenes aprobados icono</string>
</resources>