<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    >

    <EditText
        android:id="@+id/exam_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_dialog_send_exam_input"
        android:digits=" áóúíABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz0123456789"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        >

        <Button
            android:layout_margin="5dp"
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_dialog_send_exam_cancel"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/boton_enviar"
            />

        <Button
            android:layout_margin="5dp"
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_dialog_send_exam_send"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/boton_enviar"
            />

    </LinearLayout>



</LinearLayout>